crates/rome_formatter/tests/specs/prettier/js/comments/jsdoc.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: jsdoc.js

---
# Input
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
    return (
        <div>
           <span>Test</span>
        </div>
    );
}
```

# Output
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
  <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
  return (
        <div>
           <span>Test</span>
        </div>
    );
}

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ jsdoc.js:3:5
  │  
3 │ ┌     <div>
4 │ │         <div />
  │ └───────────────^ TypeScript only syntax

error: unterminated regex literal
  ┌─ jsdoc.js:5:11
  │
5 │     </div>
  │      -    ^ ...but the line ends here
  │      │    
  │      a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ jsdoc.js:6:1
  │
6 │ );
  │ ^ Expected an expression here

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ jsdoc.js:12:5
   │  
12 │ ┌     <div>
13 │ │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
14 │ │     </div>
   │ └──────────^ JSX only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ jsdoc.js:22:9
   │  
22 │ ┌         <div>
23 │ │            <span>Test</span>
   │ └────────────────────────────^ TypeScript only syntax

error: unterminated regex literal
   ┌─ jsdoc.js:24:15
   │
24 │         </div>
   │          -    ^ ...but the line ends here
   │          │    
   │          a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:25:5
   │
25 │     );
   │     ^ Expected an expression here


```


